# cafein

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  huong-dan-chatbox.md  restaurant-ai-app.md
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_password_hash_to_users.py  0001_initial_schema.py  0002_chat_messages.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  chat.py  health.py  restaurants.py  search.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: database.py
backend/app/models/: base.py  chat_history.py  restaurant.py  review.py  user.py
backend/app/schemas/: chat.py  restaurant.py  search.py  user.py
backend/app/services/: ai_service.py  cache_service.py  chat_service.py  chat_tools.py  embedding_service.py  qdrant_service.py  search_service.py  user_service.py
backend/data/: restaurants.json
backend/scripts/: ingest_documents.py  seed_data.py
docs/: chatbox.md
frontend/: Dockerfile  Dockerfile.dev  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/[slug]/: page.tsx
frontend/components/: ai-chat.tsx  layout-shell.tsx  query-provider.tsx  restaurant-card.tsx  right-panel.tsx  sidebar.tsx  theme-toggle.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: mock-data.ts  query-client.ts  search.ts
frontend/stores/: auth-store.ts
(+12 files in other folders)
